--- a/ContosoUniversity/Pages/Index.cshtml
+++ b/ContosoUniversity/Pages/Index.cshtml
@@ -9,9 +9,8 @@
         <div class="row no-gutters border mb-4">
             <div class="col p-4 mb-4 ">
                 <p class="card-text">
-                    Contoso University is a sample application that
-                    demonstrates how to use Entity Framework Core in an
-                    ASP.NET Core Razor Pages web app.
+                    EMI University is a sample application that
+                    illustrats a shcool management.
                 </p>
             </div>
         </div>
@@ -20,7 +19,7 @@
         <div class="row no-gutters border mb-4">
             <div class="col p-4 d-flex flex-column position-static">
                 <p class="card-text mb-auto">
-                    You can build the application by following the steps in a series of tutorials.
+                    This Section is "Gestion des soutenances" page.
                 </p>
                 <p>
 @*                    <a href="https://docs.microsoft.com/aspnet/core/data/ef-rp/intro" class="stretched-link">See the tutorial</a>
@@ -35,7 +34,7 @@
                     You can download the completed project from GitHub.
                 </p>
                 <p>
-@*                    <a href="https://github.com/dotnet/AspNetCore.Docs/tree/main/aspnetcore/data/ef-rp/intro/samples" class="stretched-link">See project source code</a>
+@*                    <a href="https://github.com/Ecole-Mohammadia-Ingenieurs/ECHCHIHAB_DOTNET" class="stretched-link">See project source code</a>
 *@                </p>
             </div>
         </div>
